# Ingestion_pipeline

./: README.md  pyproject.toml
app/: .env
app/api/: main.py
app/api/routes/: documents.py
app/prcessing/: rag.py
app/processing/: rag.py
faiss_index/: index.faiss  index.pkl
