[project]
name = "ingestion-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "langchain>=0.3.28",
    "python-multipart>=0.0.20",
    "pypdf>=6.10.2",
    "langchain-community>=0.3.31",
    "sentence-transformers>=5.1.2",
    "faiss-cpu>=1.13.0",
    "langchain-groq>=0.3.8",
    "python-dotenv>=1.2.1",
]
